[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "autoslot"
author = "Caleb Hattingh"
author-email = "caleb.hattingh@gmail.com"
home-page = "http://pythonomicon.com"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
description-file = "README.rst"

[tool.flit.metadata.requires-extra]
dev = [
    "pytest",
    "pytest-cov"
]

